tests/assets/test_suites/w3c_wsdl20/documents/bad/Interface-5B/Interface.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/Interface-5B/Interface.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:tns="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows a invalid use of WSDL 2.0 interfaces. 
		The name of all WSDL interfaces in the same namespace
		must be unique.
		
		This document violates assertions Interface-1010 and
		Description-0024.
	</wsdl:documentation>

	<wsdl:interface name="myInterface">
	</wsdl:interface>

</wsdl:description>
